--- a/aboutandroofing.css
+++ b/aboutandroofing.css
@@ -1,9 +1,6 @@
-
 .about {
-    background-image: url("photos/background.jpg");
-        background-color: rgb(146, 145, 145);
-
-    height: 300px; /* You must set a specified height */
+    background-image: url("photos/background.jpeg");
+    background-color: rgb(146, 145, 145);
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
