--- a/header.css
+++ b/header.css
@@ -7,7 +7,7 @@ header {
 }
 
 .logo-container {
-    background-image: url("photos/background.jpg");
+    background-image: url("photos/background.jpeg");
     background-color: #cccccc; /* Used if the image is unavailable */
     height: 300px; /* You must set a specified height */
     background-position: center; /* Center the image */
@@ -19,8 +19,8 @@ header {
   /* Style logo in header */
 .logo-container img {
     float: left;
-    width: 100px;
-    height: 100px;
+    width: 353px;
+    height: 117px;
     padding-right: 5px;
 }
   
