--- a/styles/aboutandroofing.css
+++ b/styles/aboutandroofing.css
@@ -1,5 +1,5 @@
 .about {
-    background-image: url("photos/background.jpeg");
+    background-image: url("../photos/background.jpeg");
     background-color: rgb(146, 145, 145);
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
@@ -7,8 +7,7 @@
     padding: 10px;
     height: 20%; /* Should be removed. Only for demonstration */
     display: inline-block;
-  }
-
+}
 
 /* Slideshow container */
 .slideshow-container {
@@ -46,26 +45,22 @@
   text-align: center;
   display: flex;
   justify-content: center;
-  }
-  
-  
-
+}
   
   /* Roofing Services Content */
-  .roofing-services {
-    background-color: rgba(31, 27, 238, 0.7);
-    padding: 10px;
-    height: 15%; 
-    display: inline-block;
-    word-wrap:break-word;
-  }
+.roofing-services {
+  background-color: rgba(31, 27, 238, 0.7);
+  padding: 10px;
+  height: 15%; 
+  display: inline-block;
+  word-wrap:break-word;
+}
   
-  .roofing-services .before-and-after-example {
-    float: right; 
-    margin: 0px 0px 15px 15px;
-    padding: 10px;
-    width: 350px;
-    height: 200px;
-    overflow: hidden;
-  }
-  
+.roofing-services .before-and-after-example {
+  float: right; 
+  margin: 0px 0px 15px 15px;
+  padding: 10px;
+  width: 350px;
+  height: 200px;
+  overflow: hidden;
+}  
