--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,8 +7,8 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   background-color: rgb(187, 195, 199); 
-
 }
+
 .container {
   display: flex;
 }
@@ -26,9 +26,11 @@ a:hover {
     width: 100%;
     overflow: hidden;
   }
+
   .topnav {
     display: none;
   }
+
   .photo-headliner .inner-text h1, .photo-headliner .inner-text h2{
     display: none;
   }
@@ -39,12 +41,13 @@ a:hover {
     padding: 10px;
     height: 150px;
     overflow: hidden;
-    background-image: url("photos/construction2.jpg");
+    background-image: url("../photos/construction2.jpg");
     background-color: #cccccc; /* Used if the image is unavailable */
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
-}
+  }
+
   .slideshow-container {
     display: block;
     margin-right: auto;
@@ -55,6 +58,7 @@ a:hover {
     background-color: rgb(146, 145, 145);
     height: 20%; /* Should be removed. Only for demonstration */
   }
+
   .testimonials {
     height: 20%;
   }
@@ -66,6 +70,7 @@ a:hover {
   .logo-container {
     height: 500px;
   }
+
   .roofing-services {
     background-color: rgba(44, 120, 235, 0.5);
     padding: 10px;
@@ -73,6 +78,7 @@ a:hover {
     display: block;
     word-wrap: break-word;
   }
+
   .roofing-services .before-and-after-example {
     display: block;
     float: right; 
@@ -82,6 +88,7 @@ a:hover {
     height: 175px;
     overflow: hidden;
   }
+
   .topnav a {
     margin: 0 auto; 
     display: inline-block;
@@ -99,9 +106,11 @@ a:hover {
     height: 130px;
     overflow: hidden;
   }
+
   .contact {
     width: 100%;
   }
+  
   .map {
     width: 100%;
   }
