--- a/styles/aboutandroofing.css
+++ b/styles/aboutandroofing.css
@@ -7,14 +7,22 @@
     padding: 10px;
     height: 20%; /* Should be removed. Only for demonstration */
     display: inline-block;
+    width: 100%;
+}
+
+#colossians {
+  text-align: center;
+  font-size: 1.5em;
 }
 
 /* Slideshow container */
 .slideshow-container {
   float: left; 
-  width:250px;
-  height:200px;
+  width:300px;
+  height:300px;
   overflow: hidden;
+  margin-right: 5px;
+  border-radius: 20px;
 }
 
 /* Hide the images by default */
@@ -64,3 +72,7 @@
   height: 200px;
   overflow: hidden;
 }  
+
+
+
+
