--- a/styles/header.css
+++ b/styles/header.css
@@ -15,17 +15,24 @@ header {
     width: 100%;
 }
 
-  /* Style logo in header */
-.logo-container img {
+/* Style logo in header */
+.logo-container .logo {
     float: left;
     width: 353px;
     height: 117px;
     padding-right: 5px;
 }
-  
-.logo-container i.slogan {
-    font-size: 1.2em;
-}
+
+.josh {
+    float: right; 
+    width:79px;
+    height:105px;
+    margin-right: 5px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    overflow: hidden;
+    border-radius: 25%;
+} 
 
 .logo-container span {
     font-size: 0.8em;
@@ -66,8 +73,6 @@ header {
     float: right;
 }
   
-  
-  /* Style the topnav links */
 .topnav a {
     margin: 0 auto; 
     display: inline;
@@ -78,20 +83,19 @@ header {
     padding: 20px;
 }
   
-  /* Change color on hover */
 .topnav a:hover {
     background-color: rgb(167, 161, 161);
     color: black;
 }
   
-  /* Style the pic under nav */
+/* Styles for photo header */
 .photo-headliner {
     position: relative;
     background-color: white;
     padding: 10px;
     height: 300px;
     overflow: hidden;
-    background-image: url("../photos/construction2.jpg");
+    background-image: url("../photos/header.jpeg");
     background-color: #cccccc; /* Used if the image is unavailable */
     height: 300px; /* You must set a specified height */
     background-position: center; /* Center the image */
@@ -100,9 +104,21 @@ header {
 }
   
 .inner-text {
+    font-family: "Arial Black";
     text-align: center;
     position: absolute;
+    font-weight: 900;
     top: 50%;
     left: 25%;
+    -webkit-text-stroke: 1px blue;
     transform: translate(-50%, -50%);
+    color: white;
 }  
+
+.inner-text h1{
+    -webkit-text-stroke: 2px rgb(31, 27, 238);
+}
+
+.inner-text h3 {
+    font-size: 10px;
+}
