Roofing Layout Done

--- a/styles/roofing.css
+++ b/styles/roofing.css
@@ -1,17 +1,69 @@
   /* Roofing Services Content */
   .roofing-services {
-    background-color: rgba(31, 27, 238, 0.7);
+    background-image: url("../photos/background.jpeg");
+    background-color: rgb(146, 145, 145);
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
     padding: 10px;
     height: 15%; 
     display: inline-block;
     word-wrap:break-word;
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
   }
-    
-  .roofing-services .before-and-after-example {
-    float: right; 
-    margin: 0px 0px 15px 15px;
+
+  .roof-service {
+    position: relative;
+    float: left;
+    /* background-color: #ffffff; */
     padding: 10px;
-    width: 350px;
-    height: 200px;
+    height: auto;
+    width: 30%;
     overflow: hidden;
-  }  
+    /* border-radius: 50%; */
+    margin: 20px;
+    margin-top: 10px;
+    /* border: 2px solid black; */
+  }
+  .roof-service img {
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #008CBA;
+  }
+
+  .roof-services img:hover .overlay {
+      opacity: 1;
+  }
+
+  .text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+
+
+
+
+
