--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,7 +40,7 @@ a:hover {
 
   .photo-headliner {
     position: relative;
-    background-color: white;
+    background-color: #ffffff;
     padding: 10px;
     height: 150px;
     overflow: hidden;
