--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,6 +1,6 @@
 .contact {
     /* background-image: url("../photos/background.jpg"); */
-    background-color: rgb(146, 145, 145);
+    background-color: rgba(30, 33, 241, 0.7);
     height: auto; /* You must set a specified height */
     padding: 10px;
     /* height: 800px; Should be removed. Only for demonstration */
