--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,40 +1,67 @@
 .contact {
     /* background-image: url("../photos/background.jpg"); */
-    background-color: rgba(30, 33, 241, 0.7);
-    height: auto; /* You must set a specified height */
+    background-color: rgba(56, 86, 255, 0.7);
+    height: 20%; /* You must set a specified height */
     padding: 10px;
     /* height: 800px; Should be removed. Only for demonstration */
     width: 100%;
     float: left;
     overflow: hidden;
-    text-align: center;
-}
+    }
   
-.contact h2{
+.contact h1{
   text-align: center;
 }
-  
-.contact img {
-  width: 50px;
-  height: auto;
-  border-radius: 25px;
+
+.contact-icon-container {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.news {
+float: left;
+width: 48%;
+margin-right: 10px;
+text-align: center;
+}
+
+.contact-us {
+  float: left;
+  width: 48%;
+  height: 352px;
+  text-align: center;
+}
+
+.contact-us strong {
+  font-size: 1.5em;
+}
+
+.contact-us span {
+  margin-left: 5px;
 }
 
 .contact iframe {
-  justify-content: center;
-  width: 640px;
-  height: 352px;
-}
-  
-.map {
-  background-color: rgb(146, 145, 145);
-  padding: 10px;
-  height: auto; /* Should be removed. Only for demonstration */
-  width: 50%;
-  float: left;
+display: block;  width: 640px;
+  height: 355px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 10px;
   overflow: hidden;
-  text-align: center;
-  justify-content: center;
+}
+
+.josh-contact {
+  width:150px;
+  height:200px;
+  margin-right: auto;
+  margin-left: auto;
+  overflow: hidden;
+  border-radius: 25px;
+  border: 1px solid black;
+}
+
+.contact .social-icons {
+  width: 50px;
+  height: auto;
 }
 
 /* Style the footer */
@@ -43,4 +70,8 @@
   padding: 5px;
   color: rgb(182, 179, 179);
   width: 100%;
+}
+
+.footer p {
+  font-size: 0.8em;
 }
