--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,15 +13,14 @@ body {
   display: flex;
 }
 
-a {
+a { 
   color: black;
+  text-decoration: none;
 }
 
 a:hover {
-  color: rgba(31, 27, 238, 0.7);
+  color: rgba(233, 232, 238, 0.7);
 }
-
-
 
 
 @media screen and (max-width: 600px){
@@ -29,9 +28,30 @@ a:hover {
     width: 100%;
     overflow: hidden;
   }
+  
+  .logo-container .logo {
+    width: 300px;
+    height: 99px;
+  }
+  .logo-container {
+    height: 500px;
+  }
+
+  .logo-contact {
+    display: none;
+  }
 
   .topnav {
     display: none;
+  }
+
+  .topnav a {
+    margin: 0 auto; 
+    display: inline-block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 2px 2px;
+    text-decoration: none;
   }
 
   .photo-headliner .inner-text h1, .photo-headliner .inner-text h2{
@@ -60,69 +80,78 @@ a:hover {
     margin-left: auto;
     /* border-radius: 20px; */
   }
+  .about {
+    background-color: rgb(146, 145, 145);
+    height: 20%; /* Should be removed. Only for demonstration */
+  }
 
   #colossians {
     font-size: 1.2em;
     font-weight: bold;
   }
 
-  .about {
-    background-color: rgb(146, 145, 145);
-    height: 20%; /* Should be removed. Only for demonstration */
-  }
-
   .testimonials {
-    height: 20%;
-  }
-
-  .testimonials .before-and-after {
     width: 100%;
-    margin-left: 0px;
   }
 
-  .testimonials .before-and-after-red {
+  .testimonials span{
+    font-size: 2.0em;
+    font-weight: bold;
+    margin-left: 10px;
+  }
+
+  .testimonials .before-and-after-1 {
     width: 100%;
-    margin-left: 0px;
+    display: inline-block;
+    margin-left:auto;
+    margin-right: auto;
+  }
+  .testimonials .before-and-after-2 {
+    width: 80%;
+    display: none;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .testimonials .before-and-after-3 {
+    width: 100%;
+    display: inline-block;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 10px;
   }
 
-  .logo-container {
-    height: 500px;
+  .testimonials .roof-quote-3 {
+    top: 20%;
   }
+
+
 
   .roofing-services {
-    background-color: rgba(44, 120, 235, 0.5);
+    background-image: none;
+    background-color: rgb(146, 145, 145);
     padding: 10px;
     height: 15%; 
-    display: block;
     word-wrap: break-word;
+    text-align: left;
   }
 
-  .roofing-services .before-and-after-example {
-    display: block;
-    float: right; 
-    margin: 0px 0px 15px 15px;
+  .roof-service {
+    float: left;    
     padding: 10px;
-    width: 300px;
-    height: 175px;
+    height: auto;
+    width: 48%;
     overflow: hidden;
-  }
-
-  .topnav a {
-    margin: 0 auto; 
-    display: inline-block;
-    color: #f2f2f2;
+    margin: 0px;
+    margin-right: 5px;
+    margin-top: 2px;
     text-align: center;
-    padding: 2px 2px;
-    text-decoration: none;
   }
-
-  .roofing-services .before-and-after-example {
-    float: right; 
-    margin: 0px 0px 15px 15px;
-    padding: 10px;
-    width: 200px;
-    height: 130px;
-    overflow: hidden;
+  
+  .roof-service img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
   }
 
   .contact {
@@ -130,8 +159,8 @@ a:hover {
   }
 
   .contact iframe {
-    width: 80%;
-    height: auto;
+    width: 100%;
+    height: 100%;
   }
   
   .map {
