--- a/styles/roofing.css
+++ b/styles/roofing.css
@@ -18,13 +18,25 @@
   float: left;
   padding: 10px;
   height: auto;
-  width: 30%;
+  width: 33%;
   overflow: hidden;
-  margin: 20px;
   margin-top: 10px;
 }
 
 .roof-service img {
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+}
+
+.roof-service-mid {
+  float: left;
+  margin-top: 10px;
+  width: 50%;
+}
+
+.roof-service-mid img {
   border-radius: 50%;
   width: 300px;
   height: 300px;
