--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,6 +80,7 @@ a:hover {
     margin-left: auto;
     /* border-radius: 20px; */
   }
+
   .about {
     background-color: rgb(146, 145, 145);
     height: 20%; /* Should be removed. Only for demonstration */
@@ -124,8 +125,6 @@ a:hover {
     top: 20%;
   }
 
-
-
   .roofing-services {
     background-image: none;
     background-color: rgb(146, 145, 145);
@@ -142,7 +141,7 @@ a:hover {
     width: 48%;
     overflow: hidden;
     margin: 0px;
-    margin-right: 5px;
+    margin-right: 2px;
     margin-top: 2px;
     text-align: center;
   }
@@ -154,13 +153,46 @@ a:hover {
     object-fit: cover;
   }
 
+  .roof-service-mid {
+    float: left;    
+    padding: 10px;
+    height: auto;
+    width: 48%;
+    overflow: hidden;
+    margin: 0px;
+    margin-right: 5px;
+    margin-top: 2px;
+    text-align: center;
+  }
+
+  .roof-service-mid img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+  }
+
   .contact {
     width: 100%;
   }
 
+  .news {
+    float: left;
+    width: 100%;
+    margin-right: 10px;
+    text-align: center;
+  }
+
   .contact iframe {
     width: 100%;
-    height: 100%;
+    height: 215px;
+  }
+
+  .contact-us {
+    float: left;
+    width: 100%;
+    height: auto;
+    text-align: center;
   }
   
   .map {
