--- a/styles/roofing.css
+++ b/styles/roofing.css
@@ -2,9 +2,9 @@
 .roofing-services {
   background-image: url("../photos/background.jpeg");
   background-color: rgb(146, 145, 145);
-  background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: cover; /* Resize the background image to cover the entire container */
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
   padding: 10px;
   height: 15%; 
   display: inline-block;
