aboutandroofing css spacing

--- a/styles/aboutandroofing.css
+++ b/styles/aboutandroofing.css
@@ -1,13 +1,13 @@
 .about {
-    background-image: url("../photos/background.jpeg");
-    background-color: rgb(146, 145, 145);
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size: cover; /* Resize the background image to cover the entire container */
-    padding: 10px;
-    height: 20%; /* Should be removed. Only for demonstration */
-    display: inline-block;
-    width: 100%;
+  background-image: url("../photos/background.jpeg");
+  background-color: rgb(146, 145, 145);
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
+  padding: 10px;
+  height: 20%; 
+  display: inline-block;
+  width: 100%;
 }
 
 #colossians {
@@ -50,15 +50,8 @@
   to {opacity: 1}
 }
 /* Style the content; Slideshow styling at bottom */
- 
 .connect {
   text-align: center;
   display: flex;
   justify-content: center;
 }
-  
-
-
-
-
-
