--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,13 +1,11 @@
 .contact {
-    /* background-image: url("../photos/background.jpg"); */
-    background-color: rgba(56, 86, 255, 0.7);
-    height: 20%; /* You must set a specified height */
-    padding: 10px;
-    /* height: 800px; Should be removed. Only for demonstration */
-    width: 100%;
-    float: left;
-    overflow: hidden;
-    }
+  background-color: rgba(56, 86, 255, 0.7);
+  height: 20%; 
+  padding: 10px;
+  width: 100%;
+  float: left;
+  overflow: hidden;
+}
   
 .contact h1{
   text-align: center;
@@ -41,7 +39,7 @@
 }
 
 .contact iframe {
-display: block;  width: 640px;
+  display: block;  width: 640px;
   height: 355px;
   margin-left: auto;
   margin-right: auto;
