--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,6 +70,19 @@ a:hover {
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
   }
+  
+  .inner-text {
+    font-family: "Arial Black";
+    text-align: center;
+    position: absolute;
+    font-weight: 900;
+    top: 50%;
+    left: 25%;
+    -webkit-text-stroke: 1px blue;
+    transform: translate(-50%, -50%);
+    color: #ffffff;
+    text-rendering: optimizeLegibility; 
+  }  
 
   .slideshow-container {
     float: left; 
