--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,6 +23,7 @@ a:hover {
 }
 
 /* Phone/Media styling */
+
 @media screen and (max-width: 600px){
   .container {
     width: 100%;
@@ -408,3 +409,448 @@ a:hover {
     width: 100%;
   }
 }
+
+
+
+
+/* Header Styling*/
+header {
+  width: 100%;
+  margin: 0 auto; 
+  height: 110px;
+  display: flex;
+}
+
+.logo-container {
+  background-image: url("../photos/background.jpeg");
+  background-color: #cccccc; 
+  height: auto; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
+  width: 100%;
+}
+
+/* Style logo in header */
+.logo-container .logo {
+  float: left;
+  width: 353px;
+  height: 117px;
+  padding-right: 5px;
+}
+
+.josh {
+  float: right; 
+  width:79px;
+  height:105px;
+  margin-right: 5px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  overflow: hidden;
+  border-radius: 25%;
+} 
+
+.logo-container span {
+  font-size: 0.8em;
+  float: right;
+  margin-right: 5px;
+}
+  
+/* Style the top navigation bar */
+.topnav {
+  width: 100%;
+  text-align: center;
+  display: inline-block;
+}
+
+.topnav ul {
+  list-style-type: none;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  padding-left: 20px;
+}
+  
+.topnav li {
+  display: inline;
+}
+  
+.topnav li a {
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
+}
+  
+.topnav ul li.right {
+  float: right;
+}
+  
+.topnav a {
+  margin: 0 auto; 
+  display: inline;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  padding: 20px;
+}
+  
+.topnav a:hover {
+  background-color: rgb(167, 161, 161);
+  color: black;
+}
+  
+/* Styles for photo header */
+.photo-headliner {
+  position: relative;
+  padding: 10px;
+  height: 300px;
+  overflow: hidden;
+  background-image: url("../photos/header.jpeg");
+  background-color: #cccccc; /*Used if the image is unavailable */
+  height: 300px; /* You must set a specified height */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */
+}
+  
+.inner-text {
+  font-family: "Arial Black";
+  text-align: center;
+  position: absolute;
+  font-weight: 900;
+  top: 50%;
+  left: 25%;
+  -webkit-text-stroke: 1px blue;
+  transform: translate(-50%, -50%);
+  color: white;
+}  
+
+.inner-text h1{
+  -webkit-text-stroke: 2px rgb(31, 27, 238);
+}
+
+.inner-text h3 {
+  font-size: 10px;
+}
+
+
+
+
+/* About and Roofing */
+
+.about {
+  background-image: url("../photos/background.jpeg");
+  background-color: rgb(146, 145, 145);
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
+  padding: 10px;
+  height: 20%; 
+  display: inline-block;
+  width: 100%;
+}
+
+#colossians {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  font-size: 1.2em;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  float: left; 
+  width:300px;
+  height:300px;
+  overflow: hidden;
+  margin-right: 5px;
+  border-radius: 20px;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 2.5s;
+  animation-name: fade;
+  animation-duration: 2.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+/* Style the content; Slideshow styling at bottom */
+.connect {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+
+
+
+/* Testimonials */
+
+.testimonials {
+  background-color: rgb(187, 195, 199); 
+  width: 100%;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.testimonials span{
+  font-size: 2.0em;
+  position: absolute;
+  left: 0;
+  font-weight: bold;
+  margin: 5px;
+  margin-left: 25px;
+  margin-top: 25px;
+}
+
+.testimonials p {
+  text-align: center;
+}
+
+.before-and-after-1 {
+  position: relative;
+  float: left;
+  background-color: #ffffff;
+  padding: 10px;
+  height: auto;
+  width: 30%;
+  overflow: hidden;
+  background-image: url("../photos/roofs/roof-1.JPG");
+  background-color: #cccccc; 
+  height: 300px; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
+  border-radius: 25px;
+  margin: 20px;
+  margin-top: 80px;
+}
+
+.before-and-after-2 {
+  position: relative;
+  float: left;
+  background-color: #ffffff;
+  padding: 10px;
+  width: 30%;
+  overflow: hidden;
+  background-image: url("../photos/roofs/roof-2.jpeg");
+  background-color: #cccccc; 
+  height: 480px; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
+  border-radius: 25px;
+  margin: 10px;
+  margin-top: 15px;
+
+}
+
+.before-and-after-3 {
+  position: relative;
+  float: left;
+  background-color: #ffffff;
+  padding: 10px;
+  height: auto;
+  width: 30%;
+  overflow: hidden;
+  background-image: url("../photos/roofs/roof-3.jpeg");
+  background-color: #cccccc; 
+  height: 300px; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
+  border-radius: 25px;
+  margin: 20px;
+  margin-top: 80px;
+
+}
+
+.roof-quote-1 {
+  text-align: center;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  width: 90%;
+  -webkit-text-stroke: 0.4px #000000;
+  transform: translate(-50%, -50%);
+  font-weight: bold;
+  font-size: 0.9em;
+  color: #000000;
+}  
+
+.roof-quote-2 {
+  text-align: center;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  width: 90%;
+  font-size: 0.9em;
+  -webkit-text-stroke: 0.1px #ffffff;
+  transform: translate(-50%, -50%);
+  font-weight: bold;
+  color: #000000;
+}  
+
+.roof-quote-3 {
+  text-align: center;
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  width: 90%;
+  -webkit-text-stroke: 0.4px #000000;
+  transform: translate(-50%, -50%);
+  font-weight: bold;
+  font-size: 0.9em;
+}  
+
+
+  /* Roofing Services Content */
+  .roofing-services {
+    background-image: url("../photos/background.jpeg");
+    background-color: rgb(146, 145, 145);
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover; 
+    padding: 10px;
+    height: 15%; 
+    display: inline-block;
+    word-wrap:break-word;
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+  }
+  
+  .roof-service {
+    float: left;
+    padding: 10px;
+    height: auto;
+    width: 33%;
+    overflow: hidden;
+    margin-top: 10px;
+  }
+  
+  .roof-service img {
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+  }
+  
+  .roof-service-mid {
+    float: left;
+    margin-top: 10px;
+    width: 50%;
+  }
+  
+  .roof-service-mid img {
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+  }
+  
+  .roof-service img:hover {
+    opacity: 0.5;
+  }
+  
+  .roof-service-mid img:hover {
+    opacity: 0.5;
+  }
+
+
+  /* Contact Styling */
+
+  .contact {
+    background-color: rgba(56, 86, 255, 0.7);
+    height: 20%; 
+    padding: 10px;
+    width: 100%;
+    float: left;
+    overflow: hidden;
+  }
+    
+  .contact h1{
+    text-align: center;
+  }
+  
+  .contact-icon-container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .news {
+    float: left;
+    width: 48%;
+    margin-right: 10px;
+    text-align: center;
+  }
+  
+  .contact-us {
+    float: left;
+    width: 48%;
+    height: 352px;
+    text-align: center;
+  }
+  
+  .contact-us strong {
+    font-size: 1.5em;
+  }
+  
+  .contact-us span {
+    margin-left: 5px;
+  }
+  
+  .contact iframe {
+    display: block;  width: 640px;
+    height: 355px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+    overflow: hidden;
+  }
+  
+  .josh-contact {
+    width:150px;
+    height:200px;
+    margin-right: auto;
+    margin-left: auto;
+    overflow: hidden;
+    border-radius: 25px;
+  }
+  
+  .contact .social-icons {
+    width: 50px;
+    height: auto;
+  }
+  
+  /* Style the footer */
+  .footer {
+    background-color: #333;
+    padding: 5px;
+    color: rgb(182, 179, 179);
+    width: 100%;
+  }
+  
+  .footer p {
+    font-size: 0.8em;
+  }
