--- a/styles/styles.css
+++ b/styles/styles.css
@@ -504,6 +504,25 @@ header {
     font-size: 0.8em;
   }
 
+  .appointment-fixed {
+    position:fixed;
+    bottom:30px;
+    right:-10px;
+    border: 1px solid white;
+    transform: translate(-50%, -50%);
+    background-color: rgb(66, 78, 120);
+    border-radius: 5px;
+    height: auto;
+    text-align:center;
+    width:170px;
+    margin:15px;
+  }
+
+  .appointment-fixed div a {
+    color: white;
+    font-size:1.5em;
+  }
+
 
 
 /* TABLET/Media styling */
